--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.022   2019-11-29  Released-By: PERLANCAR; Urgency: medium
+
+	- Observe option header_row.
+
+
 0.021   2019-01-17  Released-By: PERLANCAR
 
 	- [bugfix] header_row parameter should not be observed.
