--- a/Changes
+++ b/Changes
@@ -10,7 +10,8 @@
 	- (Re-)observe option header_row. I didn't remmber why I changed it to
           _not_ observe header_row, probably because it makes Text::Table::CSV
           inadvertently produces "invalid" CSV; but there are valid reasons to
-          want to omit the header row. Hence I'm adding this back.
+          want to omit the header row (for example, see RT#131101). Hence I'm
+          adding this back.
 
 
 0.021   2019-01-17  Released-By: PERLANCAR
